--- a/index.html
+++ b/index.html
@@ -10,20 +10,33 @@
 <body onload="initialize()">
     <h1>Tic-Tac-Toe</h1>
     <table id="table_game">
+        <!-- Row 1 -->
         <tr>
             <td class="td_game"><div id="cell0" onclick="cellClicked(this.id)" class="fixed"></div></td>
             <td class="td_game"><div id="cell1" onclick="cellClicked(this.id)" class="fixed"></div></td>
             <td class="td_game"><div id="cell2" onclick="cellClicked(this.id)" class="fixed"></div></td>
-        </tr>
-        <tr>
             <td class="td_game"><div id="cell3" onclick="cellClicked(this.id)" class="fixed"></div></td>
+        </tr>
+        <!-- Row 2 -->
+        <tr>
             <td class="td_game"><div id="cell4" onclick="cellClicked(this.id)" class="fixed"></div></td>
             <td class="td_game"><div id="cell5" onclick="cellClicked(this.id)" class="fixed"></div></td>
-        </tr>
-        <tr>
             <td class="td_game"><div id="cell6" onclick="cellClicked(this.id)" class="fixed"></div></td>
             <td class="td_game"><div id="cell7" onclick="cellClicked(this.id)" class="fixed"></div></td>
+        </tr>
+        <!-- Row 3 -->
+        <tr>
             <td class="td_game"><div id="cell8" onclick="cellClicked(this.id)" class="fixed"></div></td>
+            <td class="td_game"><div id="cell9" onclick="cellClicked(this.id)" class="fixed"></div></td>
+            <td class="td_game"><div id="cell10" onclick="cellClicked(this.id)" class="fixed"></div></td>
+            <td class="td_game"><div id="cell11" onclick="cellClicked(this.id)" class="fixed"></div></td>
+        </tr>
+        <!-- Row 4 -->
+        <tr>
+            <td class="td_game"><div id="cell12" onclick="cellClicked(this.id)" class="fixed"></div></td>
+            <td class="td_game"><div id="cell13" onclick="cellClicked(this.id)" class="fixed"></div></td>
+            <td class="td_game"><div id="cell14" onclick="cellClicked(this.id)" class="fixed"></div></td>
+            <td class="td_game"><div id="cell15" onclick="cellClicked(this.id)" class="fixed"></div></td>
         </tr>
     </table>
     <div id="restart" title="Start new game" onclick="restartGame()">Restart</div>
